--- a/index.html
+++ b/index.html
@@ -1,16 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Geometry Geinus Practice</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <style>
+      input {
+        width: 90px;
+      }
+      #area{
+        color: black;
+      }
+      .crads img{
+        width: 200px !important;
+        height: 200px !important;
+      }
 
-</head>
-<body>
+    </style>
+  </head>
+  <body>
+    <header class="bg-dark text-white bg-gradient">
+      <nav
+        class="container d-flex justify-content-between align-items-center py-2"
+      >
+        <div>
+          <h5 class="fw-bold lh-1">Interactive</h5>
+          <p class="opacity-50 lh-1"><small>Geometry Genius</small></p>
+        </div>
+        <button class="btn btn-primary px-4">Blog</button>
+      </nav>
+    </header>
+    <main>
+      <div class="container-fluid mt-5 crads">
+        <div class="row">
+          <div class="col-lg-9">
+            <div class="row text-center ">
+              <div class="col-lg-4 p-3 border rounded">
+                <img class="img-fluid" src="./images/triangle.png" alt="" />
+                <h5 class="fw-bold my-2">Triangle</h5>
+                <p><span>Area (A) =</span> <span>0.5 * b * h</span></p>
+                <div class="d-flex align-items-center gap-2">
+                  <input
+                    type="number"
+                    name=""
+                    id="base_field"
+                    placeholder="base"
+                  />
+                  <span>cm</span>
+                  <input
+                    type="number"
+                    name=""
+                    id="height_field"
+                    placeholder="height"
+                  />
+                  <span>cm</span>
+                </div>
+                <p class="text-start my-3 fw-bold">
+                  Area: <span id="area"></span>
+                </p>
+                
+                <button id="Triangle_btn" class="btn btn-primary w-100">Calculate</button>
+              </div>
+              <div class="col-lg-4 p-3 border rounded">
+                <img class="img-fluid" src="./images/rectangle.png" alt="" />
+                <h5 class="fw-bold my-2">Rectangle</h5>
+                <p><span>Area (A) =</span> <span>w * l</span></p>
+                <div class="d-flex align-items-center gap-2">
+                  <input type="number" name="" id="width" placeholder="" />
+                  <span>cm</span>
+                  <input type="number" name="" id="lenght" placeholder="" />
+                  <span>cm</span>
+                </div>
+                <p class="text-start my-3 fw-bold">
+                  Area: <span class="ms-3" id="lenght_area"></span>
+                </p>
+                <button id="lenght_btn" class="btn btn-primary w-100">Calculate</button>
+              </div>
+              <div class="col-lg-4 p-3 border rounded">
+                <img
+                  class="img-fluid"
+                  src="./images/parallelogram.png"
+                  alt=""
+                />
+                <h5 class="fw-bold my-2">Parallelogram</h5>
+                <p><span>Area (A) =</span> <span>b * h</span></p>
+                <div class="d-flex align-items-center gap-2">
+                  <input type="number" name="" id="baseTwo" placeholder="" />
+                  <span>cm</span>
+                  <input type="number" name="" id="heightTwo" placeholder="" />
+                  <span>cm</span>
+                </div>
+                <p class="text-start my-3 fw-bold">
+                  Area: <span class="ms-3" id="heightArea"></span>
+                </p>
+                <button id="base_btn" class="btn btn-primary w-100">Calculate</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3 text-center border">
+            <h5 class="text-decoration-underline">Area Calculation</h5>
+          </div>
+        </div>
+      </div>
+    </main>
 
-
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-</body>
+    <script src="./js/app.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
